# openworkers-deno-runtime

./: .gitignore  Cargo.toml  README.md  build.rs  example.js  readme.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: rust.yml
examples/: hello.js  scheduled.js  scheduled.rs  serve-new.rs  serve-same.rs  serve.js  serve.rs  snapshot.rs
src/: env.rs  globals.d.ts  lib.rs  main.rs  permissions.rs  runtime.js  runtime.rs  snapshot.rs  task.rs  tsconfig.json  util.rs
src/ext/: event_fetch.js  event_fetch.rs  event_scheduled.js  event_scheduled.rs  fetch_event.rs  fetch_init.rs  mod.rs  noop.rs  permissions.rs  runtime.js  runtime.rs
src/ext/fetch/: 20_headers.js  22_body.js  23_request.js  23_response.js  mod.rs
