[package]
name = "openworkers-deno-runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deno_console = "0.136.0"
deno_core = "0.256.0"
deno_crypto = "0.150.0"
deno_fetch = "0.160.0"
deno_url = "0.136.0"
deno_web = "0.167.0"
deno_webidl = "0.136.0"
env_logger = "0.11.2"
log = "0.4.20"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
