[package]
name = "openworkers-runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { version = "1.5.0", features = ["serde"] }
deno_console = "0.139.0"
deno_core = "0.264.0"
deno_crypto = "0.153.0"
deno_fetch = "0.163.0"
deno_url = "0.139.0"
deno_web = "0.170.0"
deno_webidl = "0.139.0"
env_logger = "0.11.2"
http_v02 = { package = "http", version = "0.2.9" }
log = "0.4.20"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }

[dev-dependencies]
actix-web = { version = "4.5.1", features = ["macros"] }

[[example]]
name = "serve"
path = "examples/serve.rs"
